80% rt